# Translation_en_indic_finetuning

./: .env.example  .gitignore  Kaggle_IndicTrans2_Finetuning.ipynb  README.md  compare.py  main.py  pyproject.toml  run_pipeline.py  serve.py  test_inference.py
configs/: default.yaml  sample_run.yaml
constants/: __init__.py  lang_codes.py  types.py
finetuning_data/: Agriculture_english.txt  Banking_english.txt  Health_english.txt  Micro_Insurance_english.txt
inference/: run_inference.py
notebooks/: Kaggle_IndicTrans2_Finetuning.ipynb  OEM_Indic_Inference.ipynb  OEM_Indic_Train.ipynb
pipeline/benchmarking/: __init__.py
pipeline/benchmarking/runner/: __init__.py  benchmark_runner.py
pipeline/benchmarking/tracker/: __init__.py  wandb_tracker.py  wrapped_tracker.py
pipeline/evaluation/: __init__.py
pipeline/ingestion/: __init__.py  huggingface_loader.py  loader.py  local_loader.py
pipeline/model/: __init__.py
pipeline/preprocessing/: __init__.py  build_transform.py  normalization.py  processor.py
pipeline/training/: __init__.py  callbacks.py  data_collator.py  merge.py  trainer.py  training_args.py
pipeline/validation/: __init__.py  build_rules.py  rules.py  validation_report.py  validator.py
scripts/: build_csv.py
src/: __init__.py  data.py  eval.py  model.py  tokenizer_source.py  train.py  utils.py
utils/: __init__.py
utils/common/: environment.py  seed.py
utils/logging/: __init__.py  setup.py
utils/serializer/: __init__.py  export_results.py
versioning/: __init__.py  content_hashing.py  version_metadata.py
(+10 files in other folders)
